[package]
name = "realtime_backend"
version = "0.1.0"
edition = "2021"
authors = ["Nojipiz"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full", "net", "time"] }
async-trait = "0.1.58"
tokio-tungstenite = "0.17.2"
futures-util = "0.3.24"
redis = "0.22.0"
redis-async = "0.13.0"
env_logger = "0.9.1"
log = "0.4.0"
serde_json = "1.0.86"
